2002-11-02  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (ReportConstructorNotFound, ProcessTypeExpression),
	(GetAnonymousType): Minor touchups.
	* src/bytecode.cpp (ByteCode): Move ACC_SUPER logic here...
	* src/class.h (class ClassFile): from here, since modifier.cpp
	should not implicitly set it.

2002-11-02  Elliott Hughes  <enh@acm.org>

	* src/access.h: Helper functions for the changes to modifier.cpp.
	* src/error.cpp:
	* src/error.h: Consolidate some modifier error messages.
	* src/modifier.cpp: Removal of duplicate code, regularization of
	checking.
	* src/semantic.h (ReportSemError) A new form for the common case
	where there's only a single token involved, not a span.
	(ProcessAccessFlag) New prototype.

2002-10-31  Eric Blake  <ebb9@email.byu.edu>

	* src/unparse.cpp (Unparse): Fix unparse output typo.

2002-10-28  Eric Blake  <ebb9@email.byu.edu>

	* src/error.cpp (PrintCATCH_ARRAY_TYPE): Fix typo.
	* src/body.cpp (ProcessTryStatement): Detect array catch types,
	and reduce spurious catch clause duplication warnings - bug 3343.

2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessExecutableBodies): Pedantic warning for
	strange interface throws clauses - bug 3232.
	* src/expr.cpp (ProcessTypeExpression),
	(ProcessClassInstanceCreationExpression): Catch bad types that were
	found in right file but have invalid contents - bugs 3318, 3319.
	* src/error.h:
	* src/error.cpp (INVALID_TYPE_FOUND): New error message.
	* src/symbol.cpp (GetArrayType): Don't make array of bad type.

2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (GetAnonymousType): Avoid segfault on bad anonymous
	class - bug 3322.

2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ReadType): Always report when a type is not found
	- solves core dumps reported in bug 3319.

2002-10-14  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (CanCastConvert): Fix recognition of incompatible
	casts between classes - bug 3320.
